fixed spacing

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -87,3 +87,11 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+.spacing{
+  margin-bottom: 25px;
+  text-decoration: none;
+}
+.price{
+  text-decoration: none !important;
+}
